Fixed styles for overflow

--- a/source/styles/blocks/advantages.scss
+++ b/source/styles/blocks/advantages.scss
@@ -168,6 +168,7 @@
 .advantages__item-button {
   position: relative;
   grid-column: 1/-1;
+  width: fit-content;
 }
 
 .advantages__item-button::after {
