--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -14,8 +14,9 @@
 }
 
 .header__container {
+  position: relative;
+
   @include mobile {
-    position: relative;
     z-index: 3;
   }
 
@@ -49,6 +50,7 @@
     padding-top: 13px;
     padding-bottom: 12px;
     margin-right: 40px;
+    width: fit-content;
   }
 
   &:hover {
